--- a/templates/results.html
+++ b/templates/results.html
@@ -8,10 +8,10 @@
   {% for v in video %}
 
   <div class="card" style="width: 350px; height: 340px;">
-    <div class="card-body d-flex flex-row" >
-      <div style="text-align: center;" >
+    <div class="card-body d-flex flex-row">
+      <div style="text-align: center;">
         <img src="{{ v.author.profile.img.url }}" class="rounded-circle me-3" height="50px" width="50px" />
-      
+
         <div>
           <a style=" color: #000; text-decoration: none; font-size: 12px;"
             href="{% url 'app:public_profile' v.author.username %}">@{{ v.author.username }}</a>
@@ -23,13 +23,14 @@
       </div>
     </div>
     <div class="bg-image" data-mdb-ripple-color="light">
-      <img class="img-fluid" src="{{ v.img.url }}" alt="{{ v.img_title }} img" style="height: 200px !important; width: 100%;" />
-     <div class="d-flex" style="justify-content: space-around;">
-      <a href="#">
-        <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);">Read more</div>
-      </a>
-      <a class="text-dark" href="{{ v.img.url }}" download><i class="fa-solid fa-download"></i></a>
-     </div>
+      <img class="img-fluid" src="{{ v.img.url }}" alt="{{ v.img_title }} img"
+        style="height: 200px !important; width: 100%;" />
+      <div class="d-flex" style="justify-content: space-around;">
+        <a href="#">
+          <div class="mask" style="background-color: rgba(251, 251, 251, 0.15);">Read more</div>
+        </a>
+        <a class="text-dark" href="{{ v.img.url }}" download><i class="fa-solid fa-download"></i></a>
+      </div>
     </div>
 
   </div>
@@ -42,12 +43,12 @@
 {% if not video %}
 <div class="d-flex align-items-center justify-content-center">
   <div class="text-center">
-      <h1 class="display-1 fw-bold">404</h1>
-      <p class="fs-3"> <span class="text-danger">Opps!</span> {{ value }} not found</p>
-      <p class="lead">
-        There are no posts matching your request...
-        </p>
-      <a href="{% url 'app:home' %}" class="btn btn-primary">Go Home</a>
+    <h1 class="display-1 fw-bold">404</h1>
+    <p class="fs-3"> <span class="text-danger">Opps!</span> {{ value }} not found</p>
+    <p class="lead">
+      There are no posts matching your request...
+    </p>
+    <a href="{% url 'app:home' %}" class="btn btn-primary">Go Home</a>
   </div>
 </div>
 {% endif %}
