--- a/templates/user.html
+++ b/templates/user.html
@@ -115,56 +115,109 @@
             background-color: #fff;
             border: 1px solid transparent;
         }
-        
-body {
-  font-family: Arial;
-  padding: 25px;
-  background-color: #f5f5f5;
-  color: #808080;
-  	text-align: center;	
-}
+
+        body {
+            font-family: Arial;
+            padding: 25px;
+            background-color: #f5f5f5;
+            color: #808080;
+            text-align: center;
+        }
 
 
-/*-=-=-=-=-=-=-=-=-=-=-=- */
-/* Column Grids */
-/*-=-=-=-=-=-=-=-=-=-=-=- */
+        /*-=-=-=-=-=-=-=-=-=-=-=- */
+        /* Column Grids */
+        /*-=-=-=-=-=-=-=-=-=-=-=- */
 
-.col_half { width: 49%; }
-.col_third { width: 32%; }
-.col_fourth { width: 23.5%; }
-.col_fifth { width: 18.4%; }
-.col_sixth { width: 15%; }
-.col_three_fourth { width: 74.5%;}
-.col_twothird{ width: 66%;}
-.col_half,
-.col_third,
-.col_twothird,
-.col_fourth,
-.col_three_fourth,
-.col_fifth{
-	position: relative;
-	display:inline;
-	display: inline-block;
-	/* float: left; */
-	margin-right: 2%;
-	margin-bottom: 20px;
-}
-.end { margin-right: 0 !important; }
-/* Column Grids End */
+        .col_half {
+            width: 49%;
+        }
 
-.usersnem{
-    max-width: 1000px;
-    text-align-last: left;
-    margin-left: auto ;
-    margin-right: auto ; 
-}
+        .col_third {
+            width: 32%;
+        }
 
-.wrapper { width: 980px; margin: 30px auto; position: relative;}
-.counter { background-color: #ffffff; padding: 20px 0; border-radius: 5px;}
-.count-title { font-size: 40px; font-weight: normal;  margin-top: 10px; margin-bottom: 0; text-align: center; }
-.count-text { font-size: 13px; font-weight: normal;  margin-top: 10px; margin-bottom: 0; text-align: center; }
-.fa-2x { margin: 0 auto; float: none; display: table; color: #4ad1e5; }
+        .col_fourth {
+            width: 23.5%;
+        }
 
+        .col_fifth {
+            width: 18.4%;
+        }
+
+        .col_sixth {
+            width: 15%;
+        }
+
+        .col_three_fourth {
+            width: 74.5%;
+        }
+
+        .col_twothird {
+            width: 66%;
+        }
+
+        .col_half,
+        .col_third,
+        .col_twothird,
+        .col_fourth,
+        .col_three_fourth,
+        .col_fifth {
+            position: relative;
+            display: inline;
+            display: inline-block;
+            /* float: left; */
+            margin-right: 2%;
+            margin-bottom: 20px;
+        }
+
+        .end {
+            margin-right: 0 !important;
+        }
+
+        /* Column Grids End */
+
+        .usersnem {
+            max-width: 1000px;
+            text-align-last: left;
+            margin-left: auto;
+            margin-right: auto;
+        }
+
+        .wrapper {
+            width: 980px;
+            margin: 30px auto;
+            position: relative;
+        }
+
+        .counter {
+            background-color: #ffffff;
+            padding: 20px 0;
+            border-radius: 5px;
+        }
+
+        .count-title {
+            font-size: 40px;
+            font-weight: normal;
+            margin-top: 10px;
+            margin-bottom: 0;
+            text-align: center;
+        }
+
+        .count-text {
+            font-size: 13px;
+            font-weight: normal;
+            margin-top: 10px;
+            margin-bottom: 0;
+            text-align: center;
+        }
+
+        .fa-2x {
+            margin: 0 auto;
+            float: none;
+            display: table;
+            color: #4ad1e5;
+        }
     </style>
     <div class="div">
         <h1 style="text-transform: uppercase;">our site users</h1>
@@ -177,7 +230,7 @@ body {
                 <p class="count-text ">Users</p>
             </div>
 
-        
+
         </div>
     </div>
     {% for x in users %}
@@ -186,11 +239,11 @@ body {
             <div class="row bootstrap snippets bootdey">
                 <div class="col-md-8 col-xs-12">
                     <div class="panel" id="followers">
-    
+
                         <div class="panel-body">
                             <ul class="list-group list-group-dividered list-group-full">
-    
-    
+
+
                                 <li class="list-group-item">
                                     <div class="media">
                                         <div class="media-left d-flex" style="align-items: center;">
@@ -205,7 +258,7 @@ body {
                                                     <img src="{% static 'imgs/userprofile.png' %}"
                                                         class="rounded-circle me-3" height="50px" width="50px" />
                                                     {% endif %}
-    
+
                                                 </a>
                                             </div>
                                             <div>
@@ -216,12 +269,12 @@ body {
                                             </div>
                                         </div>
                                         <div class="media-body ">
-    
+
                                             <a href="{% url 'app:public_profile' x.username %}">@{{ x.username }}</a>
                                         </div>
                                     </div>
                                 </li>
-    
+
                             </ul>
                         </div>
                     </div>
@@ -233,106 +286,106 @@ body {
     <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js"></script>
     <script>
         (function ($) {
-	$.fn.countTo = function (options) {
-		options = options || {};
-		
-		return $(this).each(function () {
-			// set options for current element
-			var settings = $.extend({}, $.fn.countTo.defaults, {
-				from:            $(this).data('from'),
-				to:              $(this).data('to'),
-				speed:           $(this).data('speed'),
-				refreshInterval: $(this).data('refresh-interval'),
-				decimals:        $(this).data('decimals')
-			}, options);
-			
-			// how many times to update the value, and how much to increment the value on each update
-			var loops = Math.ceil(settings.speed / settings.refreshInterval),
-				increment = (settings.to - settings.from) / loops;
-			
-			// references & variables that will change with each update
-			var self = this,
-				$self = $(this),
-				loopCount = 0,
-				value = settings.from,
-				data = $self.data('countTo') || {};
-			
-			$self.data('countTo', data);
-			
-			// if an existing interval can be found, clear it first
-			if (data.interval) {
-				clearInterval(data.interval);
-			}
-			data.interval = setInterval(updateTimer, settings.refreshInterval);
-			
-			// initialize the element with the starting value
-			render(value);
-			
-			function updateTimer() {
-				value += increment;
-				loopCount++;
-				
-				render(value);
-				
-				if (typeof(settings.onUpdate) == 'function') {
-					settings.onUpdate.call(self, value);
-				}
-				
-				if (loopCount >= loops) {
-					// remove the interval
-					$self.removeData('countTo');
-					clearInterval(data.interval);
-					value = settings.to;
-					
-					if (typeof(settings.onComplete) == 'function') {
-						settings.onComplete.call(self, value);
-					}
-				}
-			}
-			
-			function render(value) {
-				var formattedValue = settings.formatter.call(self, value, settings);
-				$self.html(formattedValue);
-			}
-		});
-	};
-	
-	$.fn.countTo.defaults = {
-		from: 0,               // the number the element should start at
-		to: 0,                 // the number the element should end at
-		speed: 1000,           // how long it should take to count between the target numbers
-		refreshInterval: 100,  // how often the element should be updated
-		decimals: 0,           // the number of decimal places to show
-		formatter: formatter,  // handler for formatting the value before rendering
-		onUpdate: null,        // callback method for every time the element is updated
-		onComplete: null       // callback method for when the element finishes updating
-	};
-	
-	function formatter(value, settings) {
-		return value.toFixed(settings.decimals);
-	}
-}(jQuery));
+            $.fn.countTo = function (options) {
+                options = options || {};
 
-jQuery(function ($) {
-  // custom formatting example
-  $('.count-number').data('countToOptions', {
-	formatter: function (value, options) {
-	  return value.toFixed(options.decimals).replace(/\B(?=(?:\d{3})+(?!\d))/g, ',');
-	}
-  });
-  
-  // start all the timers
-  $('.timer').each(count);  
-  
-  function count(options) {
-	var $this = $(this);
-	options = $.extend({}, options || {}, $this.data('countToOptions') || {});
-	$this.countTo(options);
-  }
-});
+                return $(this).each(function () {
+                    // set options for current element
+                    var settings = $.extend({}, $.fn.countTo.defaults, {
+                        from: $(this).data('from'),
+                        to: $(this).data('to'),
+                        speed: $(this).data('speed'),
+                        refreshInterval: $(this).data('refresh-interval'),
+                        decimals: $(this).data('decimals')
+                    }, options);
+
+                    // how many times to update the value, and how much to increment the value on each update
+                    var loops = Math.ceil(settings.speed / settings.refreshInterval),
+                        increment = (settings.to - settings.from) / loops;
+
+                    // references & variables that will change with each update
+                    var self = this,
+                        $self = $(this),
+                        loopCount = 0,
+                        value = settings.from,
+                        data = $self.data('countTo') || {};
+
+                    $self.data('countTo', data);
+
+                    // if an existing interval can be found, clear it first
+                    if (data.interval) {
+                        clearInterval(data.interval);
+                    }
+                    data.interval = setInterval(updateTimer, settings.refreshInterval);
+
+                    // initialize the element with the starting value
+                    render(value);
+
+                    function updateTimer() {
+                        value += increment;
+                        loopCount++;
+
+                        render(value);
+
+                        if (typeof (settings.onUpdate) == 'function') {
+                            settings.onUpdate.call(self, value);
+                        }
+
+                        if (loopCount >= loops) {
+                            // remove the interval
+                            $self.removeData('countTo');
+                            clearInterval(data.interval);
+                            value = settings.to;
+
+                            if (typeof (settings.onComplete) == 'function') {
+                                settings.onComplete.call(self, value);
+                            }
+                        }
+                    }
+
+                    function render(value) {
+                        var formattedValue = settings.formatter.call(self, value, settings);
+                        $self.html(formattedValue);
+                    }
+                });
+            };
+
+            $.fn.countTo.defaults = {
+                from: 0,               // the number the element should start at
+                to: 0,                 // the number the element should end at
+                speed: 1000,           // how long it should take to count between the target numbers
+                refreshInterval: 100,  // how often the element should be updated
+                decimals: 0,           // the number of decimal places to show
+                formatter: formatter,  // handler for formatting the value before rendering
+                onUpdate: null,        // callback method for every time the element is updated
+                onComplete: null       // callback method for when the element finishes updating
+            };
+
+            function formatter(value, settings) {
+                return value.toFixed(settings.decimals);
+            }
+        }(jQuery));
+
+        jQuery(function ($) {
+            // custom formatting example
+            $('.count-number').data('countToOptions', {
+                formatter: function (value, options) {
+                    return value.toFixed(options.decimals).replace(/\B(?=(?:\d{3})+(?!\d))/g, ',');
+                }
+            });
+
+            // start all the timers
+            $('.timer').each(count);
+
+            function count(options) {
+                var $this = $(this);
+                options = $.extend({}, options || {}, $this.data('countToOptions') || {});
+                $this.countTo(options);
+            }
+        });
     </script>
-    
-  
+
+
 
 </body>
 
